some mistakes updated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="/favicon.gif" href="/favicon.gif" />
+    <link rel="icon" type="/src/assets/images/logo.png" href="/src/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brand Shop</title>
+    <title>GamingFuzz</title>
   </head>
   <body>
     <div id="root"></div>
